Fix overflow and reformat navbar

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,8 +30,17 @@ body {
 	nav {
 		background-color: black;
 		position: fixed;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		column-gap: 5px;
+		height: 50px;
 		a {
+			border: 2px solid;
+			border-color: white;
+			padding: 2px 5px;
 			color: white;
+			text-decoration: none;
 		}
 	}
 	
@@ -58,13 +67,13 @@ body {
 		/* BREAKPOINTS */
 		@media (min-width: $bp-smallphone) {
 			padding: 20px;
-			width: 100%;
+			width: 90%;
 		}
 
 		@media (min-width: $bp-phone) {
 			
 			padding: 20px;
-			width: 100%;
+			width: 90%;
 		}
 
 		@media (min-width: $bp-tablet) {
